[tool.poetry]
name = "pyckaxe"
version = "0.1.0"
description = "An expressive Minecraft utility library revolving around data manipulation and generation."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/Arcensoth/pyckaxe"
homepage = "https://github.com/Arcensoth/pyckaxe"
keywords = ["minecraft", "commands", "library", "utility", "datapack", "data"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
nbtlib = "^1.12.0"
colorama = {version = "^0.4.3", optional = true}
colorlog = {version = "^4.2.1", optional = true}
pyyaml = {version = "^5.3.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
rope = "^0.18.0"
coverage = "^5.3"
pytest-cov = "^2.10"
pytest = "^6.1"

[tool.poetry.extras]
colors = ["colorama", "colorlog"]
yaml = ["pyyaml"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
