[tool.poetry]
name = "pyckaxe"
version = "0.2.0"
description = "An expressive Minecraft utility library revolving around data manipulation and generation."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/Arcensoth/pyckaxe"
homepage = "https://github.com/Arcensoth/pyckaxe"
keywords = ["minecraft", "commands", "generators", "datapacks"]

[tool.poetry.dependencies]
python = "^3.10.0rc1"
pydantic = "^1.8.2"
click = "^7.1.2"
colorama = "^0.4.3"
colorlog = "^4.2.1"
PyYAML = "^5.4.1"
nbtlib = "^1.12.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
rope = "^0.19.0"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
